add header and section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,6 +20,9 @@
       <!-- font awosome -->
        <script src="https://kit.fontawesome.com/2489740162.js" crossorigin="anonymous"></script>
       <!-- font awosome -->
+       <!-- favicon -->
+        <link rel="shortcut icon" href="img/pawprint 1.png" type="image/x-icon">
+       <!-- favicon -->
       <style>
         .font-ADLam-Display{
              font-family: "ADLaM Display", system-ui;
@@ -30,6 +33,365 @@
       </style>
 </head>
 <body>
-   
+    <!-- header -->
+    <header>
+        <!-- navbar -->
+        <div class="bg-[#FFF9F4]">
+            <div class="navbar md:container md:mx-auto mb-[20px]">
+  <div class="navbar-start">
+    <div class="dropdown">
+      <div tabindex="0" role="button" class="btn hidden">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-5 w-5"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor">
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M4 6h16M4 12h8m-8 6h16" />
+        </svg>
+      </div>
+      <ul
+        tabindex="0"
+        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+        <li><a class="text-black text-[16px] font-normal font-Sora">Find a pet</a></li>
+        <li><a class="text-black text-[16px] font-normal font-Sora">Breeds</a></li>
+        <li><a class="text-black text-[16px] font-normal font-Sora">Find a pet</a></li>
+      </ul>
+    </div>
+      <div class="flex gap-2 items-center">
+        <img class="w-8" src="img/pawprint 1.png" alt="pawprint">
+       <a class="text-lg font-Sora font-normal md:block hidden" href="index.html">Browse<span class="text-[#FFDC26]">4</span>Pets</a>
+      </div>
+       
+  </div>
+  <div class="navbar-center hidden lg:flex">
+    <ul class="menu menu-horizontal px-1">
+        <li><a class="text-black text-[16px] font-normal font-Sora">Find a pet</a></li>
+        <li><a class="text-black text-[16px] font-normal font-Sora">Breeds</a></li>
+        <li><a class="text-black text-[16px] font-normal font-Sora">Find a pet</a></li>
+    </ul>
+  </div>
+  <div class="navbar-end gap-5">
+    <div class="flex gap-[10px]">
+      <img class="w-5 md:block hidden" src="img/bell (1) 1.png" alt="bell">
+      <img class="w-5 md:block hidden" src="img/search (2) 1.png" alt="search">
+      <img class="md:hidden block" src="img/heroicons-solid_bars-3.png" alt="heroicons-solid_bars-3">
+    </div>
+    <a class="border font-Sora text-base md:block hidden text-black border-[#FFDC26] cursor-pointer rounded-lg px-7 py-2" href="#">Login</a>
+    <a class="px-7 py-2 font-Sora text-base md:block hidden text-black rounded-lg cursor-pointer bg-[#FFDC26]">Register</a>
+  </div>
+</div>
+        </div>
+        <!-- navbar -->
+         <!-- hero -->
+          <div class="lg:px-10 px-2 xl:py-[80px] lg:py-[250px] md:py-[80px] py-[50px]" style="background: url(img/cat-big.png); background-position: center; background-repeat: no-repeat; background-size: cover;" >
+            <div class="min-h-screen md:container md:mx-auto">
+              <h3 class="font-ADLam-Display font-normal md:text-[56px] text-[30px] mb-4">
+              Pamper Your Pet, <br> Because They Deserve <br> the Bes
+            </h3>
+            <p class="md:text-[20px] text-base font-normal font-Sora mb-6">
+              Discover a world of treats, toys, 
+              and essentials handpicked for <br> your furry friends. 
+              Shop now and make tails wag with joy!
+            </p>
+             <a class="px-7 py-2 font-Sora text-base text-black rounded-lg cursor-pointer bg-[#FFDC26]">Find a pet</a>
+            </div>
+          </div>
+         <!-- hero -->
+    </header>
+    <!-- header -->
+     <!-- section -->
+      <section>
+        <!-- Categories -->
+       <div class="md:container md:mx-auto py-[70px]">
+          <h3 class="font-ADLam-Display  xl:text-start text-center text-[36px] font-normal">
+          Browse By Categories
+         </h3>
+        <!-- flex -->
+         <div class="flex justify-center py-[40px]">
+          <!-- grid -->
+           <div class="grid xl:grid-cols-6 lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-6">
+            <!-- card -->
+         <div class="card bg-[#F9DF8A] px-[48px] py-[28px]">
+  <figure>
+    <img 
+      src="img/fi_616408.svg"
+      alt="Dog"
+      class="bg-white px-6 py-6 rounded-full" />
+  </figure>
+  <div class="card-body items-center text-center">
+    <h2 class="card text-[20px] font-ADLam-Display font-normal text-black">Dog</h2>
+    <p class="text-base font-Sora text-black font-normal">3 items</p>
+  </div>
+</div>
+        <!-- card -->
+        <!-- card -->
+         <div class="card bg-[#F9DF8A] px-[48px] py-[34px]">
+  <figure>
+    <img 
+      src="img/fish.png"
+      alt="fish"
+      class="bg-white px-6 py-6 rounded-full" />
+  </figure>
+  <div class="card-body items-center text-center">
+    <h2 class="card text-[20px] font-ADLam-Display font-normal text-black">fish</h2>
+    <p class="text-base font-Sora text-black font-normal">3 items</p>
+  </div>
+</div>
+        <!-- card -->
+        <!-- card -->
+         <div class="card bg-[#F9DF8A] px-[48px] py-[34px]">
+  <figure>
+    <img 
+      src="img/unnamed (1).png"
+      alt="Cat"
+      class="bg-white px-6 py-6 rounded-full" />
+  </figure>
+  <div class="card-body items-center text-center">
+    <h2 class="card text-[20px] font-ADLam-Display font-normal text-black">Cat</h2>
+    <p class="text-base font-Sora text-black font-normal">3 items</p>
+  </div>
+</div>
+        <!-- card -->
+        <!-- card -->
+         <div class="card bg-[#F9DF8A] px-[48px] py-[34px]">
+  <figure>
+    <img 
+      src="img/unnamed (4).png"
+      alt="Dog"
+      class="bg-white px-6 py-6 rounded-full" />
+  </figure>
+  <div class="card-body items-center text-center">
+    <h2 class="card text-[20px] font-ADLam-Display font-normal text-black">Birds</h2>
+    <p class="text-base font-Sora text-black font-normal">3 items</p>
+  </div>
+</div>
+        <!-- card -->
+        <!-- card -->
+         <div class="card bg-[#F9DF8A] px-[48px] py-[34px]">
+  <figure>
+    <img 
+      src="img/unnamed (2).png"
+      alt="Small pet"
+      class="bg-white px-6 py-6 rounded-full" />
+  </figure>
+  <div class="card-body items-center text-center">
+    <h2 class="card text-[20px] font-ADLam-Display font-normal text-black">Small pet</h2>
+    <p class="text-base font-Sora text-black font-normal">3 items</p>
+  </div>
+</div>
+        <!-- card -->
+        <!-- card -->
+         <div class="card bg-[#F9DF8A] px-[48px] py-[34px]">
+  <figure>
+    <img 
+      src="img/unnamed (3).png"
+      alt="Rabit"
+      class="bg-white px-6 py-6 rounded-full" />
+  </figure>
+  <div class="card-body items-center text-center">
+    <h2 class="card text-[20px] font-ADLam-Display font-normal text-black">Rabit</h2>
+    <p class="text-base font-Sora text-black font-normal">3 items</p>
+  </div>
+</div>
+        <!-- card -->
+           </div>
+          <!-- grid -->
+         </div>
+        <!-- flex -->
+       </div>
+        <!-- Categories -->
+         <!-- pet products -->
+          <div class="bg-[#FFF9F4] py-[70px]">
+            <h3 class="font-ADLam-Display  xl:text-start text-center text-[36px] font-normal">
+              Trending Pet Products
+            </h3>
+          <!-- main pet  -->
+           <div class="flex justify-center lg:flex-row flex-col gap-6 lg:px-0 md:px-6 px-1">
+               <!-- shirt for dogs -->
+             <div class="bg-[#F9DF8A] md:py-[0px] py-[25px] rounded-lg lg:px-8  md:px-16">
+              <h3 class="text-[36px] font-normal mb-4 text-black font-ADLam-Display ">T- Shirt For Dogs</h3>
+              <p class="text-base font-normal text-[#574F35] font-Sora">Discover a world of treats, toys, and <br> essentials handpicked for </p>
+              <div class="flex items-center lg:-mt-16 md:-mt-10 ">
+                <a class="md:mb-20 mb-8 bg-white text-black font-Sora text-base font-normal lg:px-7 md:px-8 py-2 rounded-lg" href="#">Shop Now</a>
+                <div class="lg:w-52 md:w-82">
+                  <img src="img/cute-pet-small.png" alt="cute-pet-small">
+                </div>
+              </div>
+             </div>
+            <!-- shirt for dogs -->
+            <!-- flex  -->
+             <div class="flex lg:justify-start justify-center">
+              <!-- grid -->
+             <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-6">
+               <!-- pet bed -->
+              <div class="flex items-center px-5 py-4 border rounded-lg border-gray-200 bg-white gap-4">
+  <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
+    <img
+      src="img/fi_616408.svg"
+      alt="Dog" />
+  </div>
+  <div class="card">
+    <div class="flex items-center gap-3">
+      <img src="img/fi_2107957 (1).svg" alt="Star">
+      <h4 class="text-[#111] text-base font-normal font-Sora">4.5</h4>
+    </div>
+    <h2 class="text-[#111] text-[20px] font-medium font-Sora">Pet Bed</h2>
+    <h3 class="text-[#111] text-base font-medium font-Sora">$39.99</h3>
+  </div>
+</div>
+             <!-- pet bed -->
+               <!-- pet bed -->
+              <div class="flex items-center px-5 py-4 border rounded-lg border-gray-200 bg-white gap-4">
+  <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
+    <img
+      src="img/fi_616408.svg"
+      alt="Dog" />
+  </div>
+  <div class="card">
+    <div class="flex items-center gap-3">
+      <img src="img/fi_2107957 (1).svg" alt="Star">
+      <h4 class="text-[#111] text-base font-normal font-Sora">4.5</h4>
+    </div>
+    <h2 class="text-[#111] text-[20px] font-medium font-Sora">Pet Bed</h2>
+    <h3 class="text-[#111] text-base font-medium font-Sora">$39.99</h3>
+  </div>
+</div>
+             <!-- pet bed -->
+               <!-- pet bed -->
+              <div class="flex items-center px-5 py-4 border border-gray-200 bg-white gap-4">
+  <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
+    <img
+      src="img/fi_616408.svg"
+      alt="Dog" />
+  </div>
+  <div class="card">
+    <div class="flex items-center gap-3">
+      <img src="img/fi_2107957 (1).svg" alt="Star">
+      <h4 class="text-[#111] text-base font-normal font-Sora">4.5</h4>
+    </div>
+    <h2 class="text-[#111] text-[20px] font-medium font-Sora">Pet Bed</h2>
+    <h3 class="text-[#111] text-base font-medium font-Sora">$39.99</h3>
+  </div>
+</div>
+             <!-- pet bed -->
+               <!-- pet bed -->
+              <div class="flex items-center px-5 py-4 border rounded-lg border-gray-200 bg-white gap-4">
+  <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
+    <img
+      src="img/fi_616408.svg"
+      alt="Dog" />
+  </div>
+  <div class="card">
+    <div class="flex items-center gap-3">
+      <img src="img/fi_2107957 (1).svg" alt="Star">
+      <h4 class="text-[#111] text-base font-normal font-Sora">4.5</h4>
+    </div>
+    <h2 class="text-[#111] text-[20px] font-medium font-Sora">Pet Bed</h2>
+    <h3 class="text-[#111] text-base font-medium font-Sora">$39.99</h3>
+  </div>
+</div>
+             <!-- pet bed -->
+               <!-- pet bed -->
+               <div class="flex items-center px-5 py-4 border rounded-lg border-gray-200 bg-white gap-4">
+  <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
+    <img
+      src="img/fi_616408.svg"
+      alt="Dog" />
+  </div>
+  <div class="card">
+    <div class="flex items-center gap-3">
+      <img src="img/fi_2107957 (1).svg" alt="Star">
+      <h4 class="text-[#111] text-base font-normal font-Sora">4.5</h4>
+    </div>
+    <h2 class="text-[#111] text-[20px] font-medium font-Sora">Pet Bed</h2>
+    <h3 class="text-[#111] text-base font-medium font-Sora">$39.99</h3>
+  </div>
+</div>
+             <!-- pet bed -->
+               <!-- pet bed -->
+              <div class="flex items-center px-5 py-4 border rounded-lg border-gray-200 bg-white gap-4">
+  <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
+    <img
+      src="img/fi_616408.svg"
+      alt="Dog" />
+  </div>
+  <div class="card">
+    <div class="flex items-center gap-3">
+      <img src="img/fi_2107957 (1).svg" alt="Star">
+      <h4 class="text-[#111] text-base font-normal font-Sora">4.5</h4>
+    </div>
+    <h2 class="text-[#111] text-[20px] font-medium font-Sora">Pet Bed</h2>
+    <h3 class="text-[#111] text-base font-medium font-Sora">$39.99</h3>
+  </div>
+</div>
+             <!-- pet bed -->
+               <!-- pet bed -->
+               <div class="flex items-center px-5 py-4 border rounded-lg border-gray-200 bg-white gap-4">
+  <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
+    <img
+      src="img/fi_616408.svg"
+      alt="Dog" />
+  </div>
+  <div class="card">
+    <div class="flex items-center gap-3">
+      <img src="img/fi_2107957 (1).svg" alt="Star">
+      <h4 class="text-[#111] text-base font-normal font-Sora">4.5</h4>
+    </div>
+    <h2 class="text-[#111] text-[20px] font-medium font-Sora">Pet Bed</h2>
+    <h3 class="text-[#111] text-base font-medium font-Sora">$39.99</h3>
+  </div>
+</div>
+             <!-- pet bed -->
+               <!-- pet bed -->
+             <div class="flex items-center px-5 py-4 border rounded-lg border-gray-200 bg-white gap-4">
+  <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
+    <img
+      src="img/fi_616408.svg"
+      alt="Dog" />
+  </div>
+  <div class="card">
+    <div class="flex items-center gap-3">
+      <img src="img/fi_2107957 (1).svg" alt="Star">
+      <h4 class="text-[#111] text-base font-normal font-Sora">4.5</h4>
+    </div>
+    <h2 class="text-[#111] text-[20px] font-medium font-Sora">Pet Bed</h2>
+    <h3 class="text-[#111] text-base font-medium font-Sora">$39.99</h3>
+  </div>
+</div>
+             <!-- pet bed -->
+               <!-- pet bed -->
+            <div class="lg:block hidden">
+                <div class="flex items-center px-5 py-4 border rounded-lg border-gray-200 bg-white gap-4">
+  <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
+    <img
+      src="img/fi_616408.svg"
+      alt="Dog" />
+  </div>
+  <div class="card">
+    <div class="flex items-center gap-3">
+      <img src="img/fi_2107957 (1).svg" alt="Star">
+      <h4 class="text-[#111] text-base font-normal font-Sora">4.5</h4>
+    </div>
+    <h2 class="text-[#111] text-[20px] font-medium font-Sora">Pet Bed</h2>
+    <h3 class="text-[#111] text-base font-medium font-Sora">$39.99</h3>
+  </div>
+</div>
+            </div>
+             <!-- pet bed -->
+             </div>
+            <!-- grid -->
+             </div>
+            <!-- flex  -->
+           </div>
+          <!-- main pet  -->
+          </div>
+         <!-- pet products -->
+      </section>
+     <!-- section -->
 </body>
 </html>
