--- a/index.html
+++ b/index.html
@@ -206,28 +206,45 @@
        </div>
         <!-- Categories -->
          <!-- pet products -->
-          <div class="bg-[#FFF9F4] py-[70px]">
-            <h3 class="font-ADLam-Display  xl:text-start text-center text-[36px] font-normal">
+          <div class="bg-[#FFF9F4] py-[70px] ">
+           <div class="md:container md:mx-auto py-16">
+             <h3 class="font-ADLam-Display  xl:text-start text-center text-[36px] font-normal">
               Trending Pet Products
             </h3>
+           </div>
           <!-- main pet  -->
-           <div class="flex justify-center lg:flex-row flex-col gap-6 lg:px-0 md:px-6 px-1">
+           <div class="flex justify-center lg:flex-row flex-col xl:gap-6 lg:gap-4 md:gap-3 gap-2 lg:px-0 md:px-6 px-1">
                <!-- shirt for dogs -->
-             <div class="bg-[#F9DF8A] md:py-[0px] py-[25px] rounded-lg lg:px-8  md:px-16">
-              <h3 class="text-[36px] font-normal mb-4 text-black font-ADLam-Display ">T- Shirt For Dogs</h3>
-              <p class="text-base font-normal text-[#574F35] font-Sora">Discover a world of treats, toys, and <br> essentials handpicked for </p>
-              <div class="flex items-center lg:-mt-16 md:-mt-10 ">
-                <a class="md:mb-20 mb-8 bg-white text-black font-Sora text-base font-normal lg:px-7 md:px-8 py-2 rounded-lg" href="#">Shop Now</a>
-                <div class="lg:w-52 md:w-82">
-                  <img src="img/cute-pet-small.png" alt="cute-pet-small">
-                </div>
-              </div>
-             </div>
+             <div class="bg-[#F9DF8A] xl:py-12 lg:py-10 md:py-8 py-6 rounded-lg lg:px-6 md:px-10 px-4 flex flex-col justify-between">
+    <div>
+      <h3 class="text-[28px] md:text-[32px] xl:text-[36px] font-normal mb-4 text-black font-ADLam-Display">
+        T-Shirt For Dogs
+      </h3>
+      <p class="text-base font-normal text-[#574F35] font-Sora">
+        Discover a world of treats, toys, and <br class="hidden lg:block">
+        essentials handpicked for
+      </p>
+    </div>
+
+    <div class="flex items-center lg:justify-between lg:-mt-14 md:-mt-10 md: -mt-12">
+      <a
+        href="#"
+        class="bg-white mb-12 text-black font-Sora font-medium text-sm md:text-base xl:px-6 lg:px-3 sm: px-6 py-2 rounded-lg shadow-sm hover:bg-gray-100 transition"
+      >
+        Shop Now
+      </a>
+      <img
+        src="img/cute-pet-small.png"
+        alt="cute-pet-small"
+        class="w-36 md:w-44 lg:w-40 h-auto"
+      />
+    </div>
+  </div>
             <!-- shirt for dogs -->
             <!-- flex  -->
              <div class="flex lg:justify-start justify-center">
               <!-- grid -->
-             <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-6">
+             <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 xl:gap-6 lg:gap-4">
                <!-- pet bed -->
               <div class="flex items-center px-5 py-4 border rounded-lg border-gray-200 bg-white gap-4">
   <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
