--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
          <div class="card bg-[#F9DF8A] px-[48px] py-[34px]">
   <figure>
     <img 
-      src="img/unnamed (1).png"
+      src="img/bilai.png"
       alt="Cat"
       class="bg-white px-6 py-6 rounded-full" />
   </figure>
@@ -161,7 +161,7 @@
          <div class="card bg-[#F9DF8A] px-[48px] py-[34px]">
   <figure>
     <img 
-      src="img/unnamed (4).png"
+      src="img/bird.png"
       alt="Dog"
       class="bg-white px-6 py-6 rounded-full" />
   </figure>
@@ -175,7 +175,7 @@
          <div class="card bg-[#F9DF8A] px-[48px] py-[34px]">
   <figure>
     <img 
-      src="img/unnamed (2).png"
+      src="img/bandor.png"
       alt="Small pet"
       class="bg-white px-6 py-6 rounded-full" />
   </figure>
@@ -189,7 +189,7 @@
          <div class="card bg-[#F9DF8A] px-[48px] py-[34px]">
   <figure>
     <img 
-      src="img/unnamed (3).png"
+      src="img/khorgosh.png"
       alt="Rabit"
       class="bg-white px-6 py-6 rounded-full" />
   </figure>
@@ -244,7 +244,7 @@
             <!-- flex  -->
              <div class="flex lg:justify-start justify-center">
               <!-- grid -->
-             <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 xl:gap-6 lg:gap-4">
+             <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-4">
                <!-- pet bed -->
               <div class="flex items-center px-5 py-4 border rounded-lg border-gray-200 bg-white gap-4">
   <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
@@ -266,8 +266,8 @@
               <div class="flex items-center px-5 py-4 border rounded-lg border-gray-200 bg-white gap-4">
   <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
     <img
-      src="img/fi_616408.svg"
-      alt="Dog" />
+      src="img/fish.png"
+      alt="fish" />
   </div>
   <div class="card">
     <div class="flex items-center gap-3">
@@ -283,8 +283,8 @@
               <div class="flex items-center px-5 py-4 border border-gray-200 bg-white gap-4">
   <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
     <img
-      src="img/fi_616408.svg"
-      alt="Dog" />
+      src="img/bird.png"
+      alt="bird" />
   </div>
   <div class="card">
     <div class="flex items-center gap-3">
@@ -300,8 +300,8 @@
               <div class="flex items-center px-5 py-4 border rounded-lg border-gray-200 bg-white gap-4">
   <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
     <img
-      src="img/fi_616408.svg"
-      alt="Dog" />
+      src="img/bilai.png"
+      alt="cat" />
   </div>
   <div class="card">
     <div class="flex items-center gap-3">
@@ -317,8 +317,8 @@
                <div class="flex items-center px-5 py-4 border rounded-lg border-gray-200 bg-white gap-4">
   <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
     <img
-      src="img/fi_616408.svg"
-      alt="Dog" />
+      src="img/bandor.png"
+      alt="Small Pet" />
   </div>
   <div class="card">
     <div class="flex items-center gap-3">
@@ -334,8 +334,8 @@
               <div class="flex items-center px-5 py-4 border rounded-lg border-gray-200 bg-white gap-4">
   <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
     <img
-      src="img/fi_616408.svg"
-      alt="Dog" />
+      src="img/fi_5389144.png"
+      alt="pet bed" />
   </div>
   <div class="card">
     <div class="flex items-center gap-3">
@@ -351,8 +351,8 @@
                <div class="flex items-center px-5 py-4 border rounded-lg border-gray-200 bg-white gap-4">
   <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
     <img
-      src="img/fi_616408.svg"
-      alt="Dog" />
+      src="img/khorgosh.png"
+      alt="khorgosh" />
   </div>
   <div class="card">
     <div class="flex items-center gap-3">
@@ -368,8 +368,8 @@
              <div class="flex items-center px-5 py-4 border rounded-lg border-gray-200 bg-white gap-4">
   <div  class="bg-[#FFF9F4] rounded-lg p-[19px]">
     <img
-      src="img/fi_616408.svg"
-      alt="Dog" />
+      src="img/fi_5389144.png"
+      alt="pet bed" />
   </div>
   <div class="card">
     <div class="flex items-center gap-3">
@@ -408,6 +408,39 @@
           <!-- main pet  -->
           </div>
          <!-- pet products -->
+          <!-- everyday low price -->
+           <div class="md:container md:mx-auto mt-[141px]">
+            <h3 class="font-ADLam-Display  xl:text-start text-center text-[36px] font-normal">
+          Everyday low Price
+         </h3>
+        <div class="flex justify-center lg:flex-row flex-col xl:gap-16 gap-6 px-3 mt-14">
+           <!-- hero -->
+          <div class="rounded-lg" style="background: linear-gradient(109deg, #F8CCFB 1.27%, #ACD2FD 100%);">
+  <div class="hero-content flex-col-reverse lg:flex-row-reverse">
+    <img
+      src="img/cute-dog-mid.png"
+      class="rounded-lg lg:w-[312px] md:w-[382px] w-[214px]" />
+    <div class="lg:pl-[50px] lg:text-start text-center pl-0">
+      <p class="text-black text-[20px] font-normal font-Sora mb-3 md:block hidden">Under Price</p>
+      <h3 class="md:text-2xl text-[22px] font-normal text-black font-ADLam-Display mb-2">Pet Grooming Mitt</h3>
+      <h3 class="text-[24px] font-normal font-ADLam-Display mb-4 text-white md:block hidden">(Easy Hair Removal)</h3>
+      <h1 class="md:text-[56px] text-4xl font-normal text-black font-ADLam-Display">$7.99</h1>
+    </div>
+  </div>
+</div>
+         <!-- hero -->
+          <!-- hero -->
+           <div class="md:p-8 p-6 rounded-lg" style="background: linear-gradient(109deg, #FFF9F4 1.27%, #F9DF8A 100%);">
+            <h2 class="text-[32px] font-normal text-black font-ADLam-Display">T-Shirt for Dogs</h2>
+            <div class="flex">
+              <h1 class="xl:text-[56px] lg:text-[35px] md:text-[45px] text-[20px] font-normal font-ADLam-Display text-[#FFDC26]">$7.99</h1>
+              <img class="lg:w-[250px] md:w-[300px] w-[217px]" src="img/cute-pet-mid.png" alt="">
+            </div>
+           </div>
+          <!-- hero -->
+        </div>
+           </div>
+          <!-- everyday low price -->
       </section>
      <!-- section -->
 </body>
