add footer and changes

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
         <!-- navbar -->
          <!-- hero -->
-          <div class="lg:px-10 px-2 xl:py-[80px] lg:py-[250px] md:py-[80px] py-[50px]" style="background: url(img/cat-big.png); background-position: center; background-repeat: no-repeat; background-size: cover;" >
+          <div class="lg:px-10 px-2 xl:py-[80px] lg:py-[250px] md:py-[80px] pb-[20px]" style="background: url(img/cat-big.png); background-position: center; background-repeat: no-repeat; background-size: cover;" >
             <div class="min-h-screen md:container md:mx-auto">
               <h3 class="font-ADLam-Display font-normal md:text-[56px] text-[30px] mb-4">
               Pamper Your Pet, <br> Because They Deserve <br> the Bes
@@ -420,7 +420,7 @@
     <img
       src="img/cute-dog-mid.png"
       class="rounded-lg lg:w-[312px] md:w-[382px] w-[214px]" />
-    <div class="lg:pl-[50px] lg:text-start text-center pl-0">
+    <div class="xl:pl-[125px] lg:pl-[50px] lg:text-start text-center pl-0">
       <p class="text-black text-[20px] font-normal font-Sora mb-3 md:block hidden">Under Price</p>
       <h3 class="md:text-2xl text-[22px] font-normal text-black font-ADLam-Display mb-2">Pet Grooming Mitt</h3>
       <h3 class="text-[24px] font-normal font-ADLam-Display mb-4 text-white md:block hidden">(Easy Hair Removal)</h3>
@@ -441,7 +441,64 @@
         </div>
            </div>
           <!-- everyday low price -->
+         
       </section>
      <!-- section -->
+      <!-- footer -->
+       <footer class="bg-[#FFED92] flex flex-col items-center mt-[396px] xl:px-[150px] lg:px-[50px]">
+          <!-- pawsome news -->
+            <div class="hero md:container md:mx-auto -mt-[270px] bg-[#FFF9F4] ">
+  <div class="flex items-center lg:gap-[117px] gap-20 flex-col lg:flex-row lg:px-[100px] py-[40px]">
+    <img
+      src="img/cute-pet-mid.png"
+      class="rounded-lg" />
+    <div class="md:text-start text-center">
+      <h1 class="text-5xl font-bold mb-5">Get Pawsome News!</h1>
+      <p class="mb-[36px] text-black text-[20px] font-normal font-Sora">
+       Exclusive training tips, ticks, product deals and more.
+      </p>
+      <input type="text" placeholder="Enter email...." class="input w-full block mb-[36px]" />
+      <button class="bg-[#FFDC26] text-black font-Sora text-[20px] px-[30px] py-[10px] rounded-lg">Subscribe</button>
+    </div>
+  </div>
+</div>
+           <!-- pawsome news -->
+        <!-- footer 1st -->
+         <footer class="footer items-end text-neutral-content p-10 mt-[148px]">
+  <aside>
+   <div class="flex items-center gap-3 mb-7">
+    <img src="img/unnamed.png" alt="footer logo">
+       <a class="text-lg text-black font-Sora font-normal md:block hidden" href="index.html">Browse<span class="text-[#FFDC26]">4</span>Pets</a>
+   </div>
+   <p class="text-black text-[20px] font-normal font-Sora">
+    Discover a world of treats, toys, and <br> essentials handpicked for your furry <br> friends
+   </p>
+  </aside>
+  <nav class="">
+    <a class="text-black text-[20px] font-normal font-Sora mb-4">Find a pet</a>
+    <a class="text-black text-[20px] font-normal font-Sora mb-4">Breeds</a>
+    <a class="text-black text-[20px] font-normal font-Sora">Contact us</a>
+  </nav>
+  <nav>
+    <h6 class="text-black text-[16px] font-medium font-Sora">Follow Us</h6>
+    <div class="flex gap-4">
+      <div>
+        <i class="fa-brands fa-facebook text-black"></i>
+      </div>
+      <div>
+        <i class="fa-brands fa-instagram text-black"></i>
+      </div>
+      <div>
+       <i class="fa-brands fa-linkedin text-black"></i>
+      </div>
+      <div>
+       <i class="fa-brands fa-youtube text-black"></i>
+      </div>
+    </div>
+  </nav>
+</footer>
+        <!-- footer 1st -->
+       </footer>
+      <!-- footer -->
 </body>
 </html>
