--- a/index.html
+++ b/index.html
@@ -441,7 +441,60 @@
         </div>
            </div>
           <!-- everyday low price -->
-         
+         <!-- Pet Loves -->
+          <div class="md:container md:mx-auto">
+            <h3 class="font-ADLam-Display  xl:text-start text-center text-[36px] font-normal py-20">
+              Love and Pet Care
+            </h3>
+            <!-- flex -->
+             <div class="flex justify-center px-3">
+              <!-- grid -->
+               <div class="grid md:grid-cols-3 grid-cols-1 gap-6">
+                <!-- card -->
+                 <div class="card bg-[#FFED92] shadow-xl">
+  <figure>
+    <img
+      src="img/6644227b0eafbeee1fb6d3bb_feature pet 3-p-500.webp"
+      alt="car in Dog" />
+  </figure>
+  <div class="card-body">
+    <h2 class="card text-black text-2xl font-ADLam-Display font-normal">Tailored Grooming Excellence</h2>
+    <p class="text-black text-[20px] font-normal font-Sora">Our professional groomers will keep <br> your pets looking their best, using <br> gentle techniques and high-quality <br> products.</p>
+  </div>
+</div>
+                <!-- card -->
+                <!-- card -->
+                 <div class="card bg-[#FFED92] shadow-xl">
+  <figure>
+    <img
+      src="img/6644227b43457ef04f99508e_feature pet 1-p-500.webp"
+      alt="Men and Pet" />
+  </figure>
+  <div class="card-body">
+    <h2 class="card text-black text-2xl font-ADLam-Display font-normal">Tailored Grooming Excellence</h2>
+    <p class="text-black text-[20px] font-normal font-Sora">Our professional groomers will keep <br> your pets looking their best, using <br> gentle techniques and high-quality <br> products.</p>
+  </div>
+</div>
+                <!-- card -->
+                <!-- card -->
+                 <div class="card bg-[#FFED92] shadow-xl">
+  <figure>
+    <img
+      src="img/6644227b90f9cb6d13f96985_feature pet 2-p-500.webp"
+      alt="two dogs running" />
+  </figure>
+  <div class="card-body">
+    <h2 class="card text-black text-2xl font-ADLam-Display font-normal">Tailored Grooming Excellence</h2>
+    <p class="text-black text-[20px] font-normal font-Sora">Our professional groomers will keep <br> your pets looking their best, using <br> gentle techniques and high-quality <br> products.</p>
+  </div>
+</div>
+                <!-- card -->
+               </div>
+              <!-- grid -->
+             </div>
+            <!-- flex -->
+          </div>
+         <!-- Pet Loves -->
       </section>
      <!-- section -->
       <!-- footer -->
