--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
         <!-- navbar -->
          <!-- hero -->
-          <div class="lg:px-10 px-2 xl:py-[80px] lg:py-[250px] md:py-[80px] pb-[20px]" style="background: url(img/cat-big.png); background-position: center; background-repeat: no-repeat; background-size: cover;" >
+          <div class="lg:px-10 xl:py-[80px] lg:py-[250px] md:py-[80px] pb-[20px]" style="background: url(img/cat-big.png); background-position: center; background-repeat: no-repeat; background-size: cover;" >
             <div class="min-h-screen md:container md:mx-auto">
               <h3 class="font-ADLam-Display font-normal md:text-[56px] text-[30px] mb-4">
               Pamper Your Pet, <br> Because They Deserve <br> the Bes
@@ -213,14 +213,14 @@
             </h3>
            </div>
           <!-- main pet  -->
-           <div class="flex justify-center lg:flex-row flex-col xl:gap-6 lg:gap-4 md:gap-3 gap-2 lg:px-0 md:px-6 px-1">
+           <div class="flex justify-center lg:flex-row flex-col xl:gap-6 lg:gap-4 gap-5 lg:px-0 md:px-6 px-1">
                <!-- shirt for dogs -->
              <div class="bg-[#F9DF8A] xl:py-12 lg:py-10 md:py-8 py-6 rounded-lg lg:px-6 md:px-10 px-4 flex flex-col justify-between">
     <div>
-      <h3 class="text-[28px] md:text-[32px] xl:text-[36px] font-normal mb-4 text-black font-ADLam-Display">
+      <h3 class="text-[28px] md:text-[40px] xl:text-[36px] font-normal mb-4 text-black font-ADLam-Display">
         T-Shirt For Dogs
       </h3>
-      <p class="text-base font-normal text-[#574F35] font-Sora">
+      <p class="lg:text-base text-xl font-normal text-[#574F35] font-Sora">
         Discover a world of treats, toys, and <br class="hidden lg:block">
         essentials handpicked for
       </p>
@@ -451,7 +451,7 @@
               <!-- grid -->
                <div class="grid md:grid-cols-3 grid-cols-1 gap-6">
                 <!-- card -->
-                 <div class="card bg-[#FFED92] shadow-xl">
+                 <div class="card bg-[#FFED92]">
   <figure>
     <img
       src="img/6644227b0eafbeee1fb6d3bb_feature pet 3-p-500.webp"
@@ -464,7 +464,7 @@
 </div>
                 <!-- card -->
                 <!-- card -->
-                 <div class="card bg-[#FFED92] shadow-xl">
+                 <div class="card bg-[#FFED92]">
   <figure>
     <img
       src="img/6644227b43457ef04f99508e_feature pet 1-p-500.webp"
@@ -477,7 +477,7 @@
 </div>
                 <!-- card -->
                 <!-- card -->
-                 <div class="card bg-[#FFED92] shadow-xl">
+                 <div class="card bg-[#FFED92]">
   <figure>
     <img
       src="img/6644227b90f9cb6d13f96985_feature pet 2-p-500.webp"
@@ -498,15 +498,15 @@
       </section>
      <!-- section -->
       <!-- footer -->
-       <footer class="bg-[#FFED92] flex flex-col items-center mt-[396px] xl:px-[150px] lg:px-[50px]">
+       <footer class="bg-[#FFED92] flex flex-col items-center lg:mt-[396px] mt-[500px] xl:px-[150px] lg:px-[50px] px-5">
           <!-- pawsome news -->
-            <div class="hero md:container md:mx-auto -mt-[270px] bg-[#FFF9F4] ">
+            <div class="hero md:container md:mx-auto lg:-mt-[270px] md:-mt-[500px] -mt-[400px] bg-[#FFF9F4] px-1 rounded-lg">
   <div class="flex items-center lg:gap-[117px] gap-20 flex-col lg:flex-row lg:px-[100px] py-[40px]">
     <img
       src="img/cute-pet-mid.png"
       class="rounded-lg" />
     <div class="md:text-start text-center">
-      <h1 class="text-5xl font-bold mb-5">Get Pawsome News!</h1>
+      <h1 class="md:text-5xl text-2xl font-bold mb-5">Get Pawsome News!</h1>
       <p class="mb-[36px] text-black text-[20px] font-normal font-Sora">
        Exclusive training tips, ticks, product deals and more.
       </p>
@@ -517,11 +517,11 @@
 </div>
            <!-- pawsome news -->
         <!-- footer 1st -->
-         <footer class="footer items-end text-neutral-content p-10 mt-[148px]">
+         <footer class="footer items-end text-neutral-content md:px-4 px-2 mt-[148px]">
   <aside>
    <div class="flex items-center gap-3 mb-7">
     <img src="img/unnamed.png" alt="footer logo">
-       <a class="text-lg text-black font-Sora font-normal md:block hidden" href="index.html">Browse<span class="text-[#FFDC26]">4</span>Pets</a>
+       <a class="text-lg text-black font-Sora font-normal" href="index.html">Browse<span class="text-[#FFDC26]">4</span>Pets</a>
    </div>
    <p class="text-black text-[20px] font-normal font-Sora">
     Discover a world of treats, toys, and <br> essentials handpicked for your furry <br> friends
