--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
         <!-- navbar -->
          <!-- hero -->
-          <div class="lg:px-10 xl:py-[80px] lg:py-[250px] md:py-[80px] pb-[20px]" style="background: url(img/cat-big.png); background-position: center; background-repeat: no-repeat; background-size: cover;" >
+          <div class="lg:px-10 md:px-2 xl:pb-[350px] lg:pb-[150px] md:py-[80px] pb-[20px]" style="background: url(img/cat-big.png); background-position: center; background-repeat: no-repeat; background-size: cover;" >
             <div class="min-h-screen md:container md:mx-auto">
               <h3 class="font-ADLam-Display font-normal md:text-[56px] text-[30px] mb-4">
               Pamper Your Pet, <br> Because They Deserve <br> the Bes
