--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <section>
         <!-- Categories -->
        <div class="md:container md:mx-auto py-[70px]">
-          <h3 class="font-ADLam-Display  xl:text-start text-center text-[36px] font-normal">
+          <h3 class="font-ADLam-Display  lg:text-start text-center lg:px-10 px-0 text-[36px] font-normal">
           Browse By Categories
          </h3>
         <!-- flex -->
@@ -208,7 +208,7 @@
          <!-- pet products -->
           <div class="bg-[#FFF9F4] py-[70px] ">
            <div class="md:container md:mx-auto py-16">
-             <h3 class="font-ADLam-Display  xl:text-start text-center text-[36px] font-normal">
+             <h3 class="font-ADLam-Display lg:text-start text-center lg:px-10 px-0 text-[36px] font-normal">
               Trending Pet Products
             </h3>
            </div>
@@ -410,7 +410,7 @@
          <!-- pet products -->
           <!-- everyday low price -->
            <div class="md:container md:mx-auto mt-[141px]">
-            <h3 class="font-ADLam-Display  xl:text-start text-center text-[36px] font-normal">
+            <h3 class="font-ADLam-Display  lg:text-start text-center px-10 text-[36px] font-normal">
           Everyday low Price
          </h3>
         <div class="flex justify-center lg:flex-row flex-col xl:gap-16 gap-6 px-3 mt-14">
@@ -443,7 +443,7 @@
           <!-- everyday low price -->
          <!-- Pet Loves -->
           <div class="md:container md:mx-auto">
-            <h3 class="font-ADLam-Display  xl:text-start text-center text-[36px] font-normal py-20">
+            <h3 class="font-ADLam-Display lg:text-start text-center lg:px-10 px-0 text-[36px] font-normal py-20">
               Love and Pet Care
             </h3>
             <!-- flex -->
@@ -498,7 +498,7 @@
       </section>
      <!-- section -->
       <!-- footer -->
-       <footer class="bg-[#FFED92] flex flex-col items-center lg:mt-[396px] mt-[500px] xl:px-[150px] lg:px-[50px] px-5">
+       <footer class="bg-[#FFED92] flex flex-col items-center lg:mt-[396px] mt-[500px] xl:px-[150px] lg:px-[50px] md:pb-[140px] pb-11 px-5">
           <!-- pawsome news -->
             <div class="hero md:container md:mx-auto lg:-mt-[270px] md:-mt-[500px] -mt-[400px] bg-[#FFF9F4] px-1 rounded-lg">
   <div class="flex items-center lg:gap-[117px] gap-20 flex-col lg:flex-row lg:px-[100px] py-[40px]">
