--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
       </section>
      <!-- section -->
       <!-- footer -->
-       <footer class="bg-[#FFED92] flex flex-col items-center lg:mt-[396px] mt-[500px] xl:px-[150px] lg:px-[50px] md:pb-[140px] pb-11 px-5">
+       <footer class="bg-[#FFED92] flex flex-col items-center lg:mt-[396px] md:mt-[600px] mt-[500px] xl:px-[150px] lg:px-[50px] md:pb-[140px] pb-11 px-5">
           <!-- pawsome news -->
             <div class="hero md:container md:mx-auto lg:-mt-[270px] md:-mt-[500px] -mt-[400px] bg-[#FFF9F4] px-1 rounded-lg">
   <div class="flex items-center lg:gap-[117px] gap-20 flex-col lg:flex-row lg:px-[100px] py-[40px]">
