--- a/index.html
+++ b/index.html
@@ -24,6 +24,25 @@
         <link rel="shortcut icon" href="img/pawprint 1.png" type="image/x-icon">
        <!-- favicon -->
       <style>
+        .Cursor{    
+    font-size: 30px;
+    white-space: nowrap;
+    overflow: hidden;    
+}
+.typewriter-animation {
+  animation: 
+    typewriter 5s steps(50) 1s 1 normal both, 
+    blinkingCursor 500ms steps(50) infinite normal;
+}
+@keyframes typewriter {
+  from { width: 0; }
+  to { width: 100%; }
+}
+@keyframes blinkingCursor{
+  from { border-right-color: rgba(255,255,255,.75); }
+  to { border-right-color: transparent; }
+}
+
         .font-ADLam-Display{
              font-family: "ADLaM Display", system-ui;
         }
@@ -90,10 +109,10 @@
          <!-- hero -->
           <div class="lg:px-10 md:px-2 xl:pb-[350px] lg:pb-[150px] md:py-[80px] pb-[20px]" style="background: url(img/cat-big.png); background-position: center; background-repeat: no-repeat; background-size: cover;" >
             <div class="md:container md:mx-auto">
-              <h3 class="font-ADLam-Display font-normal md:text-[56px] text-[30px] mb-4">
+              <h3 class="Cursor typewriter-animation font-ADLam-Display font-normal md:text-[56px] text-[30px] mb-4">
               Pamper Your Pet, <br> Because They Deserve <br> the Bes
             </h3>
-            <p class="md:text-[20px] text-base font-normal font-Sora mb-6">
+            <p class="md:text-[20px] text-base font-normal font-Sora mb-4">
               Discover a world of treats, toys, 
               and essentials handpicked for <br> your furry friends. 
               Shop now and make tails wag with joy!
